Fixed problem with overflow on dashboard

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -77,6 +77,7 @@ ul {
   background: rgba(251, 251, 251, 0.5);
   backdrop-filter: blur(3px);
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .recipe-card {
@@ -87,10 +88,6 @@ ul {
 
 .recipe-card-bg {
   border-radius: 10px;
-}
-
-.overflowX-hidden {
-  overflow-x: hidden;
 }
 
 .card-buttons {
